# OpenCV_Android_Image

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/ndk/sample/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: cv_helper.cpp  native-lib.cpp
app/src/main/java/com/ndk/sample/: MainActivity.java  NDKBitmapUtils.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/ndk/sample/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
